<resources>
    <!--  Title activity's and fragments  -->
    <string name="app_name">Coffee</string>
    <string name="title_activity_coffee">Daily coffee</string>
    <string name="title_activity_add_coffee">Add coffee</string>
    <string name="title_activity_update_coffee">Update Coffee</string>

    <!-- Menu -->
    <string name="main_title_text">coffee Today</string>
    <string name="menu_add_coffee">Add Coffee</string>

    <!--  Navigation names  -->
    <string name="nav_home">Home</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_museum">Museum</string>
    <string name="nav_coffee_choice">Coffee Choice</string>

    <!--  Activity Start  -->
    <string name="activity_start_message">Retrieving data from the database</string>
    <string name="activity_start_img_description">Coffee picture with steam</string>

    <!--  Activity Update Coffee  -->
    <string name="activity_update_coffee_btn_text">Update Coffee</string>
    <string name="activity_update_coffee_tv_text">Press the minus and add button to change the amount of coffee</string>
    <string name="activity_update_coffee_alert_title">Delete all coffee for %s?</string>
    <string name="activity_update_coffee_alert_message">After you deleted your coffee, there is no way to get it back</string>

    <!--  Activity Add Coffee  -->
    <string name="activity_add_coffee_no_img">Please add a coffee choice before trying to add a coffee.</string>
    <string name="activity_add_coffee_no_amount">Please fill in an amount</string>


    <!--  Fragment Museum  -->
    <string name="fragment_museum_title">Coffee Museum</string>
    <string name="fragment_museum_img_desc">Image of the object</string>
    <string name="fragment_museum_txt_string">Created in %s</string>


    <!--  Fragment Coffee  -->
    <string name="fragment_coffee_today">Today</string>
    <string name="fragment_coffee_yesterday">Yesterday</string>
    <string name="fragment_coffee_img_description">Image smiley</string>

    <!--  Fragment Statistics -->
    <string name="fragment_statistics_title">Total amount of coffee</string>

    <!--  Fragment add Coffee Choice  -->
    <string name="fragment_add_coffee_choice_no_name">Please fill in a name</string>
    <string name="fragment_add_coffee_choice_hint_url">Url</string>
    <string name="fragment_add_coffee_choice_hint_name">Name</string>
    <string name="fragment_add_coffee_choice_explanation">If you want to change or add a new coffee, simply put in the name with a new image url. Make sure that the url is the address of the image</string>
    <string name="fragment_add_coffee_choice_title">Add or update a coffee choice</string>
    <string name="fragment_add_coffee_choice_btn_text">Upload picture</string>
    <string name="fragment_add_coffee_choice_des_img">Coffee Choice</string>
    <string name="fragment_add_coffee_choice_btn_img_des">Click img button</string>
    <string name="fragment_add_coffee_choice_text_added">%s is added to the database</string>


    <!-- Smiley text -->
    <string name="smiley_disappointment">Wow! no coffee yet?</string>
    <string name="smiley_thinking">Guess you should drink another one!</string>
    <string name="smiley_smile">The right amount of caffeine</string>
    <string name="smiley_nervous">Do not go overboard now</string>
    <string name="smiley_shocked">Are you going to pull a all nighter?</string>

    <!-- Add coffee activity -->
    <string name="add_coffee_title">Which cup of coffee will it be?</string>
    <string name="add_coffee_how_much">How many cups?</string>
    <string name="add_coffee_button_text">Confirm cup of coffee</string>

    <!--  Model coffee row  -->
    <string name="model_coffee_image">Coffee image</string>

    <!--  Model coffee choice  -->
    <string name="model_coffee_choice_img_description">Coffee Choice</string>

    <!--  Glide text  -->
    <string name="glide_no_img">Could not find image on %s</string>
    <string name="glide_no_img_on_url">No image found on this Url</string>

    <!--  Adapter coffee  -->
    <string name="adapter_coffee_today">Today</string>
    <string name="adapter_coffee_yesterday">Yesterday</string>

</resources>
